# Agentic-chat-app

./: .env.example  .gitignore  .replit  pyproject.toml
attached_assets/: Pasted-You-are-an-expert-Python-backend-engineer-Build-a-production-ready-LangChain-based-FastAPI-backen-1758357796938_1758357796939.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/chains/: rag_chain.py
backend/app/core/: config.py  utils.py
backend/app/services/: llm_service.py  search_service.py
front-end/app/: globals.css  layout.tsx  page.tsx
